# qt_android_deployment_test

./: CMakeLists.txt  README.md  main1.cpp
subproject/: CMakeLists.txt  sublib.cpp  submain.cpp
